--- a/css/home.css
+++ b/css/home.css
@@ -42,4 +42,10 @@ form > label{
     display: block;
     margin-bottom: 10px;
 }
-
+td, th{
+    border: 1px solid black;
+    padding: 5px;
+}
+table{
+    border-collapse: collapse;
+}
