--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,12 @@
-
+/* 
 nav>ul>li {
     display: inline;
     margin: 20px;
 
 }
-
+nav a:hover{
+    text-decoration: underline;
+}
 nav li>a {
     text-decoration: none;
     color: white;
@@ -15,7 +17,7 @@ header{
     padding: 10px 0;
     text-align: center;
     
-}
+} */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -26,7 +28,6 @@ footer {
     color: white;
     text-align: center;
     padding: 20px 0;
-    position: fixed;
     width: 100%;
     bottom: 0;
 }
